# pledgerecon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: ci.yml  publish-npm.yml  release.yml
ci/: action.yml  bitbucket-pipelines.yml  cache-pre-population.yml  circleci-orb.yml  gitlab-ci.yml  pledgerecon-cache-pre-populate.sh  pre-commit-hook.yaml
crates/pledgerecon-cli/: Cargo.toml
crates/pledgerecon-cli/src/: main.rs
crates/pledgerecon-core/: Cargo.toml
crates/pledgerecon-core/benches/: scan_bench.rs
crates/pledgerecon-core/src/: advisory.rs  ai.rs  ci.rs  ci_integration.rs  config.rs  container.rs  dependency.rs  distribution.rs  enterprise.rs  finding.rs  intelligence.rs  lib.rs  notify.rs  output.rs  performance.rs  platform.rs  plugin.rs  policy.rs  reachability.rs  remediation.rs  report.rs  sbom.rs  scanner.rs  secret.rs  taint.rs  tree_sitter_parser.rs  triage.rs  version.rs
crates/pledgerecon-core/tests/: integration_scan.rs  integration_tests.rs  ollama_integration.rs
docs/: advisory-database.md  architecture.md  ci-cd.md  cli-reference.md  configuration.md  reachability.md  roadmap.md  sbom.md  security-review.md  threat-model.md  triage.md  wasm-plugins.md
examples/plugins/: README.md
examples/plugins/assemblyscript/: README.md  package.json
examples/plugins/assemblyscript/assembly/: index.ts
examples/plugins/c/: README.md  banned_packages.c
examples/plugins/go/: README.md  banned_packages.go
npm/: README.md  install.js  package.json
tests/fixtures/empty-project/: .gitkeep
tests/fixtures/go-project/: go.mod
tests/fixtures/node-project/: package.json
tests/fixtures/python-project/: requirements.txt
tests/fixtures/rust-project/: Cargo.toml
