[package]
name = "pledgerecon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for PledgeRecon — Rust-native dependency vulnerability scanner"
keywords = ["security", "vulnerability", "scanner", "ci", "sbom"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "pledgerecon"
path = "src/main.rs"

[dependencies]
pledgerecon-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3"
