[package]
name = "pledgerecon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core scanning engine for PledgeRecon — advisory database, dependency parsing, AST reachability, SBOM"
keywords = ["security", "vulnerability", "scanner", "sbom", "reachability"]
categories = ["development-tools", "development-tools::testing"]
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
ureq = { workspace = true }
wasmtime = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
memmap2 = { workspace = true }
indicatif = { workspace = true }
smallvec = { workspace = true }
bstr = { workspace = true }
aho-corasick = { workspace = true }
memchr = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_bench"
harness = false
